sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: not found: value getNombreVAleurs
for(i<-getNombreVAleurs()-2 to 0){
       ^